fix overflow on mobile and enable autoplay in banner slider

--- a/wp-content/themes/warnermusic/assets/scss/pages/_home.scss
+++ b/wp-content/themes/warnermusic/assets/scss/pages/_home.scss
@@ -502,6 +502,12 @@
 }
 .events {
     padding-top: 150px;
+    .row {
+        @include desktop {
+            margin-left: 0;
+            margin-right: 0;
+        }
+    }
     .event-artist {
         width: 100%;
         height: 100%;
